# profile-translator-blocklist

./: .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: install-test.yaml  test-package.yaml
profile_translator/: Policy.py  __init__.py  translator.py
profile_translator_blocklist/: NFQueue.py  Policy.py  __init__.py  arg_types.py  expand.py  jinja_filters.py  jinja_utils.py  translator.py
profile_translator_blocklist/templates/: CMakeLists.txt.j2  callback.c.j2  header.c.j2  main.c.j2
test/: .gitignore  __init__.py  firewall.nft  profile.yaml  test.py  test_translate.py
test/protocols/: __init__.py  test_Protocol.py  test_arp.py  test_coap.py  test_dhcp.py  test_dns.py  test_http.py  test_icmp.py  test_igmp.py  test_ipv4.py  test_ipv6.py  test_mqtt.py  test_ssdp.py  test_tcp.py  test_tls.py  test_udp.py  utils.py
